--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,24 @@
-django==5.1
+asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+colorama==0.4.6
+Django==5.1
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+Faker==33.0.0
+idna==3.10
+iniconfig==2.0.0
+model-bakery==1.20.0
+packaging==24.1
+pillow==11.0.0
+pluggy==1.5.0
+PyJWT==2.10.0
+pytest==8.3.3
 pytest-django==4.9.0
-Faker>=19.3.0
-requests>=2.31.0
-Pillow>=10.0.0
+python-dateutil==2.9.0.post0
+requests==2.32.3
+six==1.16.0
+sqlparse==0.5.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.3
